# ancient-greek-analysis

./: .devcontainer.json  Cargo.toml  db.db  db.sqlite  migrate.sh  update_db.sh
data/attic/: reset.sql  scrape_wiktionary.py
data/raw/: ancient_greek_first-declension_nouns.sql  ancient_greek_first-declension_nouns.txt  ancient_greek_first-declension_nouns.txt_parsed.csv  ancient_greek_first-declension_nouns_grouped.txt  ancient_greek_first-declension_nouns_parsed.txt  ancient_greek_second-declension_nouns.sql  ancient_greek_second-declension_nouns.txt  ancient_greek_second-declension_nouns_grouped.txt  ancient_greek_third-declension_nouns.sql  ancient_greek_third-declension_nouns.txt  ancient_greek_third-declension_nouns_grouped.txt  readme.md
data/scraping/: generate_sql.py  get_nouns.py  group_parsed.py  list_nouns.py  noun_metadata.py  readme.md  scrape_wiktionary.py
data/scripts/: download.sh  download_definitions.py  download_raw_category.py  parse.sh  parse_datadump.py  parse_kaikki_nouns.py  parse_raw_data.py  process.sh  process_parsed_data.py  utils.py
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_roots_table.rs  m20250111_124939_noun_gender.rs  m20250127_180926_noun_without_accents.rs  m20250129_153725_noun_gender_per_root.rs  m20250131_134951_noun_definitions.rs
snippets/data/: noun_conjugation.rs  noun_conjugations.sql  noun_roots.rs  noun_roots.sql
src/: enums.rs  main.rs  nouns.rs  types.rs  utils.rs
src/entities/: mod.rs  noun_conjugation_table.rs  noun_roots_table.rs  prelude.rs
src/ui/: terminal.rs
(+8 files in other folders)
