[package]
name = "greekanalyser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
sea-orm = { version = "1.1.4", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros" ] }